# query-search

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  cld2_main  sesion.sh  stemmer
cld2_lib/: Cargo.toml  build.rs
cld2_lib/cpp/: cld2_main.cpp
cld2_lib/src/: lib.rs
snowball/: iconv.py
snowball/libstemmer/: modules.h
snowball/src_c/: stem_ISO_8859_1_dutch_porter.c  stem_ISO_8859_1_german.c  stem_ISO_8859_1_norwegian.c  stem_ISO_8859_1_porter.c  stem_ISO_8859_2_polish.c  stem_KOI8_R_russian.c  stem_UTF_8_esperanto.c  stem_UTF_8_estonian.c  stem_UTF_8_french.c  stem_UTF_8_indonesian.c  stem_UTF_8_nepali.c  stem_UTF_8_norwegian.c  stem_UTF_8_polish.c  stem_UTF_8_romanian.c  stem_UTF_8_ukrainian.c  stem_UTF_8_yiddish.c
source_lib/cld2/internal/: compile_libs.sh
source_lib/snowball/: algorithms.mk  make.sh  snowball  stemwords
source_lib/snowball/algorithms/: ukrainian.sbl
source_lib/snowball/libstemmer/: mkinc.mak  modules.txt
source_lib/snowball/src_c/: stem_ISO_8859_1_danish.c  stem_ISO_8859_1_dutch.c  stem_ISO_8859_1_english.c  stem_ISO_8859_1_finnish.c  stem_ISO_8859_1_french.c  stem_ISO_8859_1_indonesian.c  stem_ISO_8859_1_italian.c  stem_UTF_8_arabic.c  stem_UTF_8_danish.c  stem_UTF_8_dutch.c  stem_UTF_8_dutch_porter.c  stem_UTF_8_english.c  stem_UTF_8_finnish.c  (+10 more)
src/: lib.rs  main.rs
src/cld3/: cld3.rs  mod.rs  test_vec.rs
src/engine/: engine_main.rs  mod.rs  other.rs
src/extract_words/: extract_words.rs
src/stemmer/: stremmer.cpp
src/stremmer/: mod.rs  stremer_main.rs
stremmer/: Cargo.toml  build.rs
stremmer/src/: lib.rs
(+2 files in other folders)
