[package]
name = "query-search"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.0"

[dependencies]

stremer = {path = "./stremmer"}
cld3 = "0.1.1"

libc = "0.2"
rayon = "1.11.0"
snowball = "0.1.3"

rustc-hash = "2.1.1"

once_cell = "1.19"
object-pool = "0.6.0"
tokio = { version = "1", features = ["full"] }

regex = "1.12.3"
phf = { version="0.13.1", features=["macros"]}
dashmap = "6.1.0"
