[package]
name = "query-search"
version = "0.1.0"
edition = "2021"
description = "High-performance search engine with inverted index"
authors = ["Kyrylo Seriuk https://github.com/Kileer20100"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenQueri/query-search"
keywords = ["search", "engine", "inverted-index", "information-retrieval"]
categories = ["algorithms", "database"]

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

serde = { version = "1", features = ["derive"] }
stremer = {path = "./stremmer"}
cld3 = "0.1.1"

libc = "0.2"
rayon = "1.11.0"
snowball = "0.1.3"

rustc-hash = "2.1.1"

once_cell = "1.19"
object-pool = "0.6.0"
tokio = { version = "1", features = ["full"] }

regex = "1.12.3"
phf = { version="0.13.1", features=["macros"]}
dashmap = "6.1.0"
indexmap = "2.13.0"
sha2 = "0.10.9"

[profile.release]
lto = "fat"        
codegen-units = 1     
panic = "abort"       
opt-level = 3
strip = true          